# zindi-earlylearning-py

./: README.md  pyproject.toml  requirements.txt
data/clean/: dataset.parquet  sbmssn.parquet
notebooks/: analysis.ipynb  benchmark.ipynb  data-prep.ipynb  sensitivity.ipynb  tuning-bo.ipynb  tuning-dehb.ipynb
notebooks-test/: test-feature-selection-2.ipynb  test-feature-selection.ipynb  test-tuning-bohb.ipynb  test-tuning-dehb.ipynb
notebooks-test/temp/: history_04-23-23_07-35-25_W._Europe_Summer_Time.pkl  incumbent_04-23-23_07-35-25_W._Europe_Summer_Time.json
submission/: 20230423-180929.csv  20230423-182043.csv  20230425-105732.csv  20230425-110631.csv  20230425-190247.csv  20230425-210217.csv  20230425-212140.csv  20230427-135547.csv  20230427-150834.csv  20230427-152349.csv  20230430-222706.csv
