[tool.poetry]
name = "zindi-early-learning-predictors-py"
version = "0.1.0"
description = "Replication Files for the Zindi DataDrive2030 Early Learning Predictors Challenge April 2023."
authors = ["Daniel A. Seussler Becerra"]
readme = "README.md"
packages = [{include = "zindi_early_learning_predictors_py"}]

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.17.5"
lightgbm = "^3.3.5"
optuna = "^3.1.1"
wheel = "^0.40.0"
setuptools = "^67.7.1"
pip = "^23.1"
dehb = "^0.0.5"
ipykernel = "^6.22.0"
ipywidgets = "^8.0.6"
iprogress = "^0.4"
pyarrow = "^11.0.0"
pandas = "^2.0.0"
plotly = "^5.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
